Add doctor authentication and authorization